# Distributed-Computing

./: .gitignore  Cargo.toml  README.md  bash.exe.stackdump  package.json
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  types.rs  util.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: lib.rs  main.rs  server.rs
crates/coordinator/tests/: client_test.rs  grpc_client_test.rs  integration_test.rs  sql_parser_test.rs
crates/observability/: Cargo.toml
crates/raft_node/: Cargo.toml
crates/rpc/: Cargo.toml  build.rs
crates/rpc/proto/: database.proto  node.proto  raft.proto
crates/rpc/src/: client.rs  database.rs  database_service.rs  lib.rs  node.rs  raft.rs
crates/sql_parser/: Cargo.toml
crates/sql_parser/src/: lib.rs
crates/storage/: Cargo.toml
