[workspace]
resolver = "2"
members = [
  "crates/coordinator",
  "crates/rpc",
  "crates/raft_node",
  "crates/storage",
  "crates/sql_parser",
  "crates/metadata",
  "crates/observability",
  "crates/common",
  "bin/coordinator",
  "bin/node"
]

[workspace.dependencies]
zstd = { version = "0.12", features = ["pkg-config"] }
