[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
config = "0.13"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
env_logger = "0.11.8"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
