[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.8"  # Add this line
