[package]
name = "coordinator-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.13.1"
prost = "0.13.5"
tokio = { version = "1.45.0", features = ["full"] } # match rpc
rpc = { path = "../rpc" }
common = { path = "../common" }  # For error types