[package]
name = "rpc"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
prost = "0.13.5"
prost-types = "0.13.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tonic = "0.13.1"
common = { path = "../common" }
async-trait = "0.1.77"
zstd = { version = "0.12", features = ["pkg-config"] }

[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.5"
